--- a/index.html
+++ b/index.html
@@ -13572,7 +13572,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220615112253118" list="[[Devising Governance]] [[Reimagining Governance]] Hello [[Current Work]]" modified="20220615112632987" title="$:/StoryList">
+<div created="20220615133135057" list="[[Island Life panel discussion]] [[Current Work]]" modified="20220615133849928" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14269,10 +14269,9 @@ It isn't about following rules by rote or reacting to circumstances. Trustees do
 
 [[Selected Work]]</pre>
 </div>
-<div created="20220513065347695" modified="20220612212330702" tags="[[Current and Selected Work]]" title="Current Work">
+<div created="20220513065347695" modified="20220615134140596" tags="[[Current and Selected Work]]" title="Current Work">
 <pre>!!Current
 
-|[img[https://github.com/jackkytan/websiteimages/blob/master/Talk%20-%20Reimagining%20Governance%20-%20JACK.jpg?raw=true]]|[[Reimagining Governance]] (15 June 2022) - Part of Freelance Future's summer learning programme about equitable conditions in culture, I am part of this panel of people who are working on projects to reform organisational models.|
 |[img[https://pbs.twimg.com/media/FSUKcmbWUAEd3a2.jpg]]|[[Performing Borders interview]] (14 June 2022) - A three question interview I wrote for Performing Borders, a live art curatorial research platform.|
 |[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/Metal%20Culture%20-%20In%20Other%20Words%202.webp]]|[[In Other Words 2]] (Spring 2022) - A collection of artists' writing reflecting on and during a time of covid pandemic. I contributed a word search puzzle titled &quot;//The Other's Words: find the words with which you can hear me//&quot; or &quot;//Self-Portrait in 50 Words/Phrases//&quot;.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Island%20Life%20-%20Martha%20-%20film-still%201.jpg?raw=true]]|[[Island Life]] (17 May - 2 July 2022) - An exhibition at Salisbury Arts Centre I curated with Mirka Golden-Hann, exploring the work of islander artist-activists from the global south who address the political, social or economic conditions of living on islands.|
@@ -14305,7 +14304,9 @@ __Survey exhibition of Art and/in/of Law__ at [[LaTrobe Art Insitute|https://www
 
 !!Recent
 
+|[img[https://github.com/jackkytan/websiteimages/blob/master/Talk%20-%20Reimagining%20Governance%20-%20speakers.jpg?raw=true]]|[[Reimagining Governance]] (15 June 2022) - Part of Freelance Future's summer learning programme about equitable conditions in culture, I am part of this panel of people who are working on projects to reform organisational models.|
 |[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/Talk%20-%20maia_building_ecologies.jpg]]|[[Building Ecologies, Not Hierarchies]] (1 June 2022) - A panel discussion about non-hierarchical approaches to organising and building ecologies of work. Text of my talk [[here|Building Ecologies, Not Hierarchies]].|
+|&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/OGEgT6zPc2A&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;|[[Island Life panel discussion]] (31 May 2022) - Panel discussion from the Island Life exhibition featuring the international artists representing island heritages from Philippines, Australia/Larrakia Nation, Singapore, Mauritius, Jamaica and of course Britain.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Jade%20Montserrat_ecclesiastes-1250x560-1.jpg?raw=true]]|[[GEMBA|Global Ethnic Majorities Board Association]] (May 2021-ongoing) - Along with Jade Montserrat and Amy Lawrence, I founded a knowledge exchange and support group for Global Ethnic Majority trustees. I stepped away from being a main organiser in May 2022.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Talk%20-%20SEPALS-crop.png?raw=true]]|[[S:E:P:A:L:S:]] (11 Dec 2021) - A half day online conference on intersectional care and safety. I contributed a paper proposing a 'beyond of activism' towards an ecosystem of working in the arts.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/FACT-building.jpg?raw=true]]|[[FACT Board Artist-in-Residence]] (Apr 2021 - May 2022) - As the inaugural artist-in-residence on the Board of Trustees at FACT Liverpool, I explored ‘Boardness’ itself as artistic medium and as curatorial space.|
@@ -14982,7 +14983,7 @@ The experience of erasure, migration and survival as central features of contemp
 
 [[Download|https://github.com/jackkytan/websiteimages/raw/master/Island%20Life%20exhibition%20brochure-compressed.pdf]] a full copy of the Island Life exhibition brochure.</pre>
 </div>
-<div created="20220612184655220" modified="20220612184803532" tags="[[Island Life]]" title="Island Life panel discussion">
+<div created="20220612184655220" modified="20220615133910547" tags="[[Island Life]]" title="Island Life panel discussion">
 <pre>&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/OGEgT6zPc2A&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
 
 Join us at 7pm on 31 May 2022 for the broadcast of the ISLAND LIFE PANEL DISCUSSION and hear the exhibition's artists and curators discuss their backgrounds, practices and experiences of island life and work. There will be a live Q&amp;A after the broadcast.
@@ -15837,7 +15838,7 @@ Our approach to reading and reading groups is developing with time, but here are
 ** where you are.
 </pre>
 </div>
-<div created="20220612193657946" modified="20220615112309117" tags="Talks 2022 governance" title="Reimagining Governance">
+<div created="20220612193657946" modified="20220615133518731" tags="Talks 2022 governance" title="Reimagining Governance">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Talk%20-%20Reimagining%20Governance%20-%20speakers.jpg?raw=true]]
 
 Wednesday, 15 June 2022
@@ -15861,6 +15862,9 @@ Book tickets [[here|https://www.eventbrite.com/e/re-imagining-governance-tickets
 * [[RPG Longsight]]
 * [[Sample artist contract]]
 * [[Devising Governance]]
+
+And also about how governance is a social justice issue for me. Governance is a form of worlding, i.e., the material and social world is created in boardrooms, so if we want to create a new world, we need to see to how we do governance.
+
 </pre>
 </div>
 <div created="20210925122053131" modified="20220513071232503" tags="[[Artistic Practice]]" title="Residencies">
