--- a/index.html
+++ b/index.html
@@ -16479,7 +16479,7 @@ The player picks a card from each suit and combined, they tell the player what t
 
 The idea of chance not only alludes to John Cage and his idea that ‘everything is music’ and in this case for me ‘everything is art’. But it also refers to lived reality of how people (particularly Black and Asian men) are vicitmised and incarcerated randomly and arbitrarily, and how through preemptive law enforcement and the doctrine of the State of Exception, the human right to freedom the rule of law is being compromised.”</pre>
 </div>
-<div created="20220616113154087" modified="20220616130839784" tags="[[Current Work]] [[Organisational Change]] gardening governance" title="Seeding the Commons">
+<div created="20220616113154087" modified="20220616131943427" tags="[[Current Work]] [[Organisational Change]] gardening governance" title="Seeding the Commons">
 <pre>[img[https://scontent.fgla3-1.fna.fbcdn.net/v/t39.30808-6/282023340_1651486645225972_5266971803134943951_n.jpg?stp=dst-jpg_p526x296&amp;_nc_cat=110&amp;ccb=1-7&amp;_nc_sid=a26aad&amp;_nc_ohc=hIJNcw61EhwAX_Hm524&amp;_nc_ht=scontent.fgla3-1.fna&amp;oh=00_AT-Um-7vcS24wwTw0OiZOpvvcwleHuZqARaQ7UU0QoZrYg&amp;oe=62B0E73C]]
 
 https://www.seedingthecommons.org/
@@ -16497,6 +16497,22 @@ We are overjoyed that we have @jackkytan at the heart of this process (which we 
 
 So apologies for being a little quiet but there has been much reflection to do and even more bid-writing.  The coming months are going to be really transformative as we re-engage with our arts programming from within the very roots of our community.  We can’t wait!
 &lt;&lt;&lt;
+
+&lt;br&gt;
+
+[img[https://dim.mcusercontent.com/cs/9ddb2c84c3273eb0b878984f9/images/ff96026e-dda1-1cdf-e280-a52eaec25b31.jpg?w=564&amp;dpr=2]]
+
+From CSL's Newsletter (December 2021)
+
+
+&lt;&lt;&lt;
+From our earliest imaginings, we knew that we wanted Custom to enact the change that we wanted to see in the world. It's taken a lot of learning, developing and mistakes to even begin to understand what that might mean - and maybe we will never get to a complete answer - but we do know that @@color:#009900;we need to align our structure and system of governance with our ethos@@. We need to bring together our different strands of work in more creative ways.
+
+...
+
+We are also thrilled that we will very shortly be able to announce the appointment of two new directors. This will mark the beginning of our process of &quot;Recombobulation&quot;. This is a project, part-funded by SIB Group (through Kent Community Foundation), intended to enable us to reimagine our future as a resilient and creative organisation in the wake of COVID. Entangling knowledge systems, learning from the past and dreaming into the future - @@color:#CC0066;we intend to make this a public process so that the learning can benefit and include@@ a wide range of the organisations and individuals we are lucky enough to have some contact with. @@color:#0080FF;It will be a process driven by creative thinking and grounded in the earth, it will explore our entangled roots and ask difficult questions.@@ It may involve planning for our own demise or transforming ourselves entirely - we are open to any telling of this story. More information will be shared soon.
+&lt;&lt;&lt;
+
 </pre>
 </div>
 <div created="20210925104505726" modified="20220513065835478" tags="[[Current and Selected Work]]" title="Selected Work">
