--- a/index.html
+++ b/index.html
@@ -467,6 +467,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Current and Selected Work/Current Work-RPG Longsight--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Current and Selected Work/Current Work/RPG Longsight-RPG Longsight (Foundation CIO)--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Organisational Practice-Global Ethnic Majorities Board Association--118161433</li>
@@ -490,6 +492,8 @@ Error message and password prompt
 <li>$:/state/toc/TableOfContents/Study-Concepts--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Study-Research--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Study-Snuffling--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Study-Themes--118161433</li>
 
@@ -584,6 +588,10 @@ Error message and password prompt
 <li>2021</li>
 
 <li>2022</li>
+
+<li>21 June 2022</li>
+
+<li>21 June 2022 - Mission Vision Values</li>
 
 <li>26 Oct 2021 GEMBA Meeting</li>
 
@@ -739,6 +747,8 @@ Error message and password prompt
 
 <li>Joon-Lynn Goh</li>
 
+<li>Journal</li>
+
 <li>Karaoke Court</li>
 
 <li>Karaoke Court documents</li>
@@ -810,6 +820,8 @@ Error message and password prompt
 <li>RPG Longsight</li>
 
 <li>RPG Longsight (Foundation CIO)</li>
+
+<li>RPG Longsight Mission Vision Values</li>
 
 <li>S:E:P:A:L:S:</li>
 
@@ -13343,7 +13355,7 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220616124449958" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20220621151708505" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13367,7 +13379,7 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220616124747533" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<div created="20220513065309542" modified="20220621154532150" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13379,7 +13391,7 @@ exports.context = contextWidget;
 <div created="20210925131345695" modified="20220223054028174" title="$:/state/toc/TableOfContents-Installation Art--118161433">
 <pre>close</pre>
 </div>
-<div created="20210927073606510" modified="20210927074104780" title="$:/state/toc/TableOfContents-Journal--118161433">
+<div created="20210927073606510" modified="20220621151711249" title="$:/state/toc/TableOfContents-Journal--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064608845" modified="20220223054011551" title="$:/state/toc/TableOfContents-Organisational Practice--118161433">
@@ -13406,7 +13418,7 @@ exports.context = contextWidget;
 <div created="20211005145901891" modified="20220513071210173" title="$:/state/toc/TableOfContents-Residencies--118161433">
 <pre>open</pre>
 </div>
-<div created="20211203083716975" modified="20220612210842306" title="$:/state/toc/TableOfContents-Resources--118161433">
+<div created="20211203083716975" modified="20220621152238855" title="$:/state/toc/TableOfContents-Resources--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926053815363" modified="20220218174407788" title="$:/state/toc/TableOfContents-Sculpture--118161433">
@@ -13418,7 +13430,7 @@ exports.context = contextWidget;
 <div created="20210925130341602" modified="20220223054344263" title="$:/state/toc/TableOfContents-Social Practice--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513071349532" modified="20220616124550614" title="$:/state/toc/TableOfContents-Study--118161433">
+<div created="20220513071349532" modified="20220621151747137" title="$:/state/toc/TableOfContents-Study--118161433">
 <pre>close</pre>
 </div>
 <div created="20220614055652411" modified="20220614055652411" title="$:/state/toc/TableOfContents-study--118161433">
@@ -13433,7 +13445,7 @@ exports.context = contextWidget;
 <div created="20220223054502133" modified="20220513071356044" title="$:/state/toc/TableOfContents-Themes--118161433">
 <pre>close</pre>
 </div>
-<div created="20220616105722861" modified="20220616105727750" title="$:/state/toc/TableOfContents-to do--118161433">
+<div created="20220616105722861" modified="20220621151731489" title="$:/state/toc/TableOfContents-to do--118161433">
 <pre>close</pre>
 </div>
 <div created="20220513085809112" modified="20220616091411898" title="$:/state/toc/TableOfContents-Work by year--118161433">
@@ -13514,7 +13526,7 @@ exports.context = contextWidget;
 <div created="20210925122405914" modified="20211029073350913" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513080643746" modified="20220616124652822" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
+<div created="20220513080643746" modified="20220621154530965" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20220513065839196" modified="20220616124744406" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
@@ -13523,8 +13535,11 @@ exports.context = contextWidget;
 <div created="20220612184053188" modified="20220612184905785" title="$:/state/toc/TableOfContents/Current and Selected Work/Current Work-Island Life--118161433">
 <pre>close</pre>
 </div>
-<div created="20220610203817723" modified="20220610203819956" title="$:/state/toc/TableOfContents/Current and Selected Work/Current Work-RPG Longsight--118161433">
-<pre>close</pre>
+<div created="20220610203817723" modified="20220621131821043" title="$:/state/toc/TableOfContents/Current and Selected Work/Current Work-RPG Longsight--118161433">
+<pre>open</pre>
+</div>
+<div created="20220621132123393" modified="20220621135634098" title="$:/state/toc/TableOfContents/Current and Selected Work/Current Work/RPG Longsight-RPG Longsight (Foundation CIO)--118161433">
+<pre>open</pre>
 </div>
 <div created="20210926070707157" modified="20211005145317550" title="$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433">
 <pre>close</pre>
@@ -13541,7 +13556,7 @@ exports.context = contextWidget;
 <div created="20220218174354532" modified="20220612210841570" title="$:/state/toc/TableOfContents/Resources-artist resources--118161433">
 <pre>close</pre>
 </div>
-<div created="20211203103956856" modified="20220223054650051" title="$:/state/toc/TableOfContents/Resources-trustee resources--118161433">
+<div created="20211203103956856" modified="20220621151815736" title="$:/state/toc/TableOfContents/Resources-trustee resources--118161433">
 <pre>close</pre>
 </div>
 <div created="20211203083719087" modified="20211203083720167" title="$:/state/toc/TableOfContents/Resources-trustee--118161433">
@@ -13556,11 +13571,14 @@ exports.context = contextWidget;
 <div created="20220513091156121" modified="20220614060047072" title="$:/state/toc/TableOfContents/Study-Academic Research--118161433">
 <pre>close</pre>
 </div>
-<div created="20220514072512039" modified="20220616124544950" title="$:/state/toc/TableOfContents/Study-Concepts--118161433">
+<div created="20220514072512039" modified="20220621151737321" title="$:/state/toc/TableOfContents/Study-Concepts--118161433">
 <pre>close</pre>
 </div>
 <div created="20220513071410652" modified="20220513071412948" title="$:/state/toc/TableOfContents/Study-Research--118161433">
 <pre>open</pre>
+</div>
+<div created="20220621151740713" modified="20220621151741793" title="$:/state/toc/TableOfContents/Study-Snuffling--118161433">
+<pre>close</pre>
 </div>
 <div created="20220513091541376" modified="20220513114518675" title="$:/state/toc/TableOfContents/Study-Themes--118161433">
 <pre>close</pre>
@@ -13640,7 +13658,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220616113132285" list="[[Seeding the Commons]] Hello [[Current Work]]" modified="20220616125641699" title="$:/StoryList">
+<div created="20220621131819195" list="" modified="20220621152017441" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13822,6 +13840,26 @@ Image:   FEELFEELFEEL: Amy Lawrence: Screenshot: FEELFEEL 2/3: Video:Commissione
 </div>
 <div created="20220513083533934" modified="20220513083535103" tags="[[Work by year]]" title="2022">
 <pre></pre>
+</div>
+<div created="20220621151701786" modified="20220621151706482" tags="Journal" title="21 June 2022">
+<pre></pre>
+</div>
+<div created="20220621132004658" modified="20220621151807306" tags="governance Journal [[trustee resources]]" title="21 June 2022 - Mission Vision Values">
+<pre>I sometimes cringe when I ask organisations what their 'mission, vision and values statements' are because 
+
+# the word 'mission' is both militaristic and colonial (e.g., civilising or Christian mission);
+# the emphasis of 'vision' is to do our post-enlightenment Western idea that the eye (and ear)--and therefore rationality, clarity, focus and linear thinking--is more important than knowledge from our other senses (touch, taste or smell); and 
+# 'values' is too often conflated with neoliberal notions of valuation and very often they are just 'value signalling' because an organisation's stated values is rarely translated into achievable and budgeted objectives the way that its 'mission' or 'vision' are.
+
+Nevertheless, it is still useful to ask what is an organisation or a project for? What kind of vibe does the organisation want to inhabit and ooze? Who is supposed to belong to it and who is it meant to be there for? How does is inhabit itself and in its environment, context or community? What are its entanglements both human and more-than-human? Where is it heading, in what vehicle, and at what speed? And why that speed, that direction and that vehicle?
+
+There is also the issue of the 'statement'. Is a statement the best way to express something as complex as an arts organisation? If the organisation was, say, a car factory, then a clear concise statement might be very useful to express the factory's mission, vision or values. But it isn't so easy to reduce things to 3 statements for other more complex organisations, entities or relationships. 
+
+Statements, like all words, always fall short of grasping social reality (or indeed any reality if we understand things metaphysically), especially when it is in the nature of social reality to continually change. As an artist, statements are for me a launch point to other modes of perceiving and relating. They are signposts, and not the real thing. They are snapshots, and not the real thing. But signposts and snapshots aren't unhelpful if we understand them for what they are.
+
+Additionally, if statements can be written in such a way as to elevate words from having fixed meaning to also having poetic meaning, then statements can start to sympathetically vibrate with the thing that they are representing. They can  become for an organisation something that generates energy, ideas, motivation and inspiration the way that a work of art or poem does, not as a creed but as an important object that has an ongoing accountability conversation with the organisation.
+
+- 21 June 2022 (written as part of preparation for [[RPG Longsight Q1: Workshop 1|RPG Longsight Mission Vision Values]]</pre>
 </div>
 <div created="20220218173252662" modified="20220218174101473" tags="[[Global Ethnic Majorities Board Association]]" title="26 Oct 2021 GEMBA Meeting">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/WYWY_GSylvaindeleu_Art14_Jack_Tan_50_smudged_16-9.jpg]]
@@ -15297,6 +15335,9 @@ In considering my interest in organisational reform and 'bureaucracy as art', Jo
 * Kate Rich who curated a festival of radical admin: https://cubecinema.com/pages/radmin/
 * Company Drinks also has a back research branch on plausible economies: https://companydrinks.info/whats-on/economy/re-drawing-workshops/</pre>
 </div>
+<div created="20220621151649697" modified="20220621152207825" tags="TableOfContents" title="Journal">
+<pre></pre>
+</div>
 <div created="20210925104551457" modified="20220608125109645" tags="[[Selected Work]] Performances Installation [[legal aesthetics]] 2015 2014 2016 2019 2022 2017 [[Academic Research]] litigation" title="Karaoke Court">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/KC_21.jpg?raw=true]]
 &lt;br&gt;^^ Image: Tan, Jack Ky. 'Karaoke Court (Singapore): Pam -v- Pauline' part of //How To Do Things With Rules// solo exhibition, 2016. Institute of Contemporary Arts Singapore.^^
@@ -16113,7 +16154,7 @@ First half - What are trustees' current duties and liabilities?
 
 * Reviewing organisational history is a useful way to understand its culture. Lux's history is documented, among other places, in this Moving Image Review &amp; Art Journal article: [[Lux et Umbra: On the slow rise and fast fall of the Lux Centre|https://www.ingentaconnect.com/content/intellect/miraj/2017/00000006/f0020001/art00019]] by Ben Cook.</pre>
 </div>
-<div created="20220610192915195" modified="20220614122616391" tags="[[Current Work]] [[Selected Work]] governance [[Organisational Change]]" title="RPG Longsight">
+<div created="20220610192915195" modified="20220621132035468" tags="[[Current Work]] [[Selected Work]] governance [[Organisational Change]] 2022" title="RPG Longsight">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20an%20experiment.webp]]
 
 ''June 2022 - June 2023, Longsight Arts Space, Manchester''
@@ -16143,7 +16184,7 @@ Find out more on [[Proforma's website|https://www.proforma.org.uk/rpglongsight]]
 [img[https://github.com/jackkytan/websiteimages/blob/master/RPG%20Longsight%20-%20vanessa%20scott%20talk.jpg?raw=true]]
 &lt;br&gt;^^Talk by artist Vanessa Scott as part of her exhibition //Saturated// at Longsight Art Space, 17 May 2022^^</pre>
 </div>
-<div created="20220610193943267" modified="20220614121701499" tags="[[RPG Longsight]]" title="RPG Longsight (Foundation CIO)">
+<div created="20220610193943267" modified="20220621151640758" tags="[[RPG Longsight]]" title="RPG Longsight (Foundation CIO)">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20Q1%20AGM%20advert.jpg]]
 
 ''RPG Longsight - Quarter 1 - Foundation/Single Tier CIO''
@@ -16159,7 +16200,7 @@ Throughout the process of board meetings and AGMs, we will also be considering h
 
 ''Dates:''
 
-25th June 12pm-3pm – Defining LAS's Mission, Vision and Values.
+25th June 12pm-3pm – Defining LAS's [[Mission, Vision and Values|21 June 2022 - Mission Vision Values]].
 
 16th July 12pm-3pm – Brainstorming and drafting a Strategic Plan
 
@@ -16180,6 +16221,21 @@ You will be invited to attend Board meetings and to play the role of charity tru
 The Q1 roleplay will end in a short exhibition where you and LAS staff, audiences, users and neighbours will be provided space to reflect on what it was like to encounter LAS as a single tier CIO.
 
 [[Download the full Call for Participants here|https://github.com/jackkytan/websiteimages/raw/master/RPG%20Longsight%20-%20Q1%20Participant%20EOI.pdf]]</pre>
+</div>
+<div created="20220621135743924" modified="20220621151417084" tags="[[RPG Longsight (Foundation CIO)]]" title="RPG Longsight Mission Vision Values">
+<pre>!!Q1: Workshop 1
+Saturday 25 June 2022, 12-3pm
+
+|12:00|Arrival and hellos|all|
+|12:20|Introducing each other|all|
+|12:40|A briefing about RPG Longsight and Q1: Foundation CIO model|Chris/Chi/Jack|
+|1:00|Presentation from Directors of Longsight Arts Space|Chi/Chris|
+|1:15|Lunch|all|
+|1:45|Discussion about LAS' Mission, Vision and Values|Jack|
+|2:15|Discussion about Trustee's terms of reference and recruitment|Jack|
+|2:45|Looking ahead to Strategic Planning on 16 July|Jack|
+
+</pre>
 </div>
 <div created="20220612204622223" modified="20220612210717507" tags="Talks care" title="S:E:P:A:L:S:">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Talk%20-%20SEPALS-crop.png?raw=true]]
