--- a/index.html
+++ b/index.html
@@ -445,7 +445,11 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Artistic Practice/Organisational Change-Global Ethnic Majorities Board Association--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Artistic Practice/Organisational Change-RPG Longsight--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Artistic Practice/Organisational Change/Custom Food Lab-Seeding the Commons--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Artistic Practice/Organisational Change/RPG Longsight-RPG Longsight (Foundation CIO)--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Artworks-Installation--118161433</li>
 
@@ -13381,7 +13385,7 @@ exports.context = contextWidget;
 <div created="20211209081213628" modified="20220616125631611" title="$:/state/toc/TableOfContents-About--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513071259660" modified="20220622082608727" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
+<div created="20220513071259660" modified="20220622185057471" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
 <pre>close</pre>
 </div>
 <div created="20220223054537977" modified="20220513064752478" title="$:/state/toc/TableOfContents-Artworks--118161433">
@@ -13408,7 +13412,7 @@ exports.context = contextWidget;
 <div created="20210925131345695" modified="20220223054028174" title="$:/state/toc/TableOfContents-Installation Art--118161433">
 <pre>close</pre>
 </div>
-<div created="20210927073606510" modified="20220622082209182" title="$:/state/toc/TableOfContents-Journal--118161433">
+<div created="20210927073606510" modified="20220622185100967" title="$:/state/toc/TableOfContents-Journal--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064608845" modified="20220223054011551" title="$:/state/toc/TableOfContents-Organisational Practice--118161433">
@@ -13504,7 +13508,7 @@ exports.context = contextWidget;
 <div created="20220513083711981" modified="20220513083713470" title="$:/state/toc/TableOfContents/Artistic Practice-Installation--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513083714326" modified="20220622082605648" title="$:/state/toc/TableOfContents/Artistic Practice-Organisational Change--118161433">
+<div created="20220513083714326" modified="20220622185055121" title="$:/state/toc/TableOfContents/Artistic Practice-Organisational Change--118161433">
 <pre>close</pre>
 </div>
 <div created="20220513083717501" modified="20220613193652711" title="$:/state/toc/TableOfContents/Artistic Practice-Performances--118161433">
@@ -13513,14 +13517,20 @@ exports.context = contextWidget;
 <div created="20220513083719637" modified="20220613193656110" title="$:/state/toc/TableOfContents/Artistic Practice-Residencies--118161433">
 <pre>close</pre>
 </div>
-<div created="20220622074615631" modified="20220622074628543" title="$:/state/toc/TableOfContents/Artistic Practice/Organisational Change-Custom Food Lab--118161433">
-<pre>open</pre>
+<div created="20220622074615631" modified="20220622185053755" title="$:/state/toc/TableOfContents/Artistic Practice/Organisational Change-Custom Food Lab--118161433">
+<pre>close</pre>
 </div>
 <div created="20220612203537855" modified="20220612210150133" title="$:/state/toc/TableOfContents/Artistic Practice/Organisational Change-Global Ethnic Majorities Board Association--118161433">
 <pre>close</pre>
 </div>
-<div created="20220622075347552" modified="20220622075347552" title="$:/state/toc/TableOfContents/Artistic Practice/Organisational Change/Custom Food Lab-Seeding the Commons--118161433">
-<pre>open</pre>
+<div created="20220622185035345" modified="20220622185052262" title="$:/state/toc/TableOfContents/Artistic Practice/Organisational Change-RPG Longsight--118161433">
+<pre>close</pre>
+</div>
+<div created="20220622075347552" modified="20220622185033293" title="$:/state/toc/TableOfContents/Artistic Practice/Organisational Change/Custom Food Lab-Seeding the Commons--118161433">
+<pre>close</pre>
+</div>
+<div created="20220622185037463" modified="20220622185040711" title="$:/state/toc/TableOfContents/Artistic Practice/Organisational Change/RPG Longsight-RPG Longsight (Foundation CIO)--118161433">
+<pre>close</pre>
 </div>
 <div created="20220223054542393" modified="20220513064808047" title="$:/state/toc/TableOfContents/Artworks-Installation--118161433">
 <pre>open</pre>
@@ -13681,7 +13691,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220622060538023" list="[[2022-06-17 Governance as Ecology]] [[Planting a Governance Garden]] [[Seeding the Commons]] [[Custom Food Lab]] [[governance culture]] Hello [[Current Work]]" modified="20220622082538527" title="$:/StoryList">
+<div created="20220622183337564" list="[[2022-06-21 Mission Vision Values]] Hello [[Current Work]]" modified="20220622183337564" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13884,22 +13894,22 @@ Working so closely with growing food has fundamentally changed the way we think 
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20220621132004658" modified="20220622082441979" tags="governance Journal [[trustee resources]] [[to do]]" title="2022-06-21 Mission Vision Values">
-<pre>`find a good photo to illustrate MVV`
+<div created="20220621132004658" modified="20220622185044940" tags="governance Journal [[trustee resources]] [[to do]] [[RPG Longsight (Foundation CIO)]]" title="2022-06-21 Mission Vision Values">
+<pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Journal%20-%20mission%20vision%20values.png?raw=true]]
 
-I sometimes cringe when I ask organisations what their 'mission, vision and values statements' are because 
+I am preparing to head to Manchester this weekend to facilitate a board meeting where we will discuss and make some decisions on what the organisation is about, in particular its mission, vision and values. I often cringe when I ask organisations what their 'mission, vision and values statements' are because:
 
-# the word 'mission' is both militaristic and colonial (e.g., civilising or Christian mission);
-# the emphasis of 'vision' is to do our post-enlightenment Western idea that the eye (and ear)--and therefore rationality, clarity, focus and linear thinking--is more important than knowledge from our other senses (touch, taste or smell); and 
-# 'values' is too often conflated with neoliberal notions of valuation and very often they are just 'value signalling' because an organisation's stated values is rarely translated into achievable and budgeted objectives the way that its 'mission' or 'vision' are.
+# the word 'mission' has militaristic and colonial overtones (e.g., civilising or Christian mission);
+# the emphasis of 'vision' is to do with a post-enlightenment Western idea that the eye (and ear)--and therefore rationality, clarity, focus and linear thinking--is more important than knowledge from other senses (touch, taste or smell); and 
+# 'values' is too often conflated with neoliberal notions of valuation and very often value statements are just 'value signalling' because these stated values are rarely translated into achievable and budgeted objectives the way that an organisation's 'mission' or 'vision' are.
 
-Nevertheless, it is still useful to ask what is an organisation or a project for? What kind of vibe does the organisation want to inhabit and ooze? Who is supposed to belong to it and who is it meant to be there for? How does is inhabit itself and in its environment, context or community? What are its entanglements both human and more-than-human? Where is it heading, in what vehicle, and at what speed? And why that speed, that direction and that vehicle?
+Nevertheless, it is still useful to ask what is an organisation or a project for? What kind of vibe does the organisation want to inhabit and ooze? Who is supposed to belong to it? Who is it meant to be there for? How does it inhabit itself and in its environment, context or community? What are its entanglements both human and more-than-human? Where is it heading, in what vehicle, and at what speed? And why that speed, that direction and that vehicle?
 
-There is also the issue of the 'statement'. Is a statement the best way to express something as complex as an arts organisation? If the organisation was, say, a car factory, then a clear concise statement might be very useful to express the factory's mission, vision or values. But it isn't so easy to reduce things to 3 statements for other more complex organisations, entities or relationships. 
+There is also the issue with the word 'statement'. Is a statement the best way to express something as complex as an arts organisation? If the organisation was, say, a car or shoe factory, then a clear concise statement might be very useful to express the factory's mission, vision or values. But it isn't so easy to reduce more complex organisations, entities or relationships into 3 concise statements.
 
-Statements, like all words, always fall short of grasping social reality (or indeed any reality if we understand things metaphysically), especially when it is in the nature of social reality to continually change. As an artist, statements are for me a launch point to other modes of perceiving and relating. They are signposts, and not the real thing. They are snapshots, and not the real thing. But signposts and snapshots aren't unhelpful if we understand them for what they are.
+Statements, like all words, always fall short of grasping social reality (or indeed any reality if we want to understand things metaphysically), especially when it is in the nature of social reality to continually change. As an artist, statements are for me launch points to other modes of perceiving and relating. They are signposts, and not the real thing. They are snapshots, and not the real thing. But signposts and snapshots aren't unhelpful if we understand them for what they are.
 
-Additionally, if statements can be written in such a way as to elevate words from having fixed meaning to also having poetic meaning, then statements can start to sympathetically vibrate with the thing that they are representing. They can  become for an organisation something that generates energy, ideas, motivation and inspiration the way that a work of art or poem does, not as a creed but as an important object that has an ongoing accountability conversation with the organisation.
+Additionally, if statements can be written in such a way as to elevate words from having fixed meaning to also having poetic meaning, then Mission Vision Value statements can start to sympathetically vibrate with the thing that they are representing.  They can become important organisational text that generates energy, ideas, motivation and inspiration the way that a work of art or poem does: one that is in ongoing conversation with the organisation about accountability and raison d'etre.
 
 - 21 June 2022 (written as part of preparation for [[RPG Longsight Q1: Workshop 1|RPG Longsight Mission Vision Values]]</pre>
 </div>
@@ -14943,7 +14953,6 @@ An evaluation of the Artists Leaks data.
 </div>
 <div created="20220622061240917" modified="20220622073940540" tags="[[trustee resources]] governance" title="governance culture">
 <pre>
-
 ''From the non-profit perspective: ''
 
 * Ontario Nonprofit Network's [[How governance culture is shaping your decision-making|https://theonn.ca/how-governance-culture-is-shaping-your-decision-making/]]
